# advent2024_C

./: .gitignore  CMakeLists.txt  adventOfCode_2024.cpp  adventOfCode_2024.h
lib/: CMakeLists.txt  PathUtils.cpp  StringUtils.cpp
lib/Point2D/: CMakeLists.txt  Point2D.cpp  Point2D.h
resources/: day18.txt
src/: ADay.cpp  CMakeLists.txt
src/ADay/: ADay.cpp  ADay.h  CMakeLists.txt
src/day1/: CMakeLists.txt  day1.cpp  day1.h
src/day10/: CMakeLists.txt  Topographic.cpp  Topographic.h  day10.cpp  day10.h
src/day11/: CMakeLists.txt  day11.cpp  day11.h
src/day12/: CMakeLists.txt  day12.cpp  day12.h
src/day12/garden/: AGarden.cpp  AGarden.h  CMakeLists.txt  Garden.cpp  Garden.h  Garden2.cpp  Garden2.h
src/day13/: CMakeLists.txt  Machine.cpp  Machine.h  day13.cpp  day13.h
src/day14/: CMakeLists.txt  Robot.cpp  Robot.h  day14.cpp  day14.h
src/day15/: CMakeLists.txt  day15.cpp  day15.h
src/day15/sokoban/: ASokoban.cpp  ASokoban.h  CMakeLists.txt  Sokoban.cpp  Sokoban.h  Sokoban2.cpp  Sokoban2.h
src/day16/: CMakeLists.txt  day16.cpp  day16.h
src/day16/mazeSolver/: AMazeSolver.cpp  AMazeSolver.h  CMakeLists.txt  MazeSolver.cpp  MazeSolver.h  MazeSolverV2.h  Spot.h  mazeSolverV2.cpp  spot.cpp
src/day17/: CMakeLists.txt  day17.cpp  day17.h
src/day17/computer/: CMakeLists.txt  Combo.cpp  Combo.h  Computer.cpp  Computer.h  ComputerMemory.cpp  ComputerMemory.h
src/day18/: CMakeLists.txt  day18.cpp  day18.h
src/day18/mazeSolver18/: CMakeLists.txt  MazeSolver18.cpp  MazeSolver18.h  MazeSolver18V2.h  mazeSolver18V2.cpp
src/day19/: CMakeLists.txt  day19.cpp  day19.h
src/day19/towel/: CMakeLists.txt  TowelAnalyzer.cpp  TowelAnalyzer.h  TowelPart.cpp  TowelPart.h
src/day2/: CMakeLists.txt  day2.cpp  day2.h
src/day20/: CMakeLists.txt  day20.cpp  day20.h
src/day20/mazeSolver20/: CMakeLists.txt  CheatingMaze.cpp  CheatingMaze.h  MazeSolver20.cpp  MazeSolver20.h
src/day21/: CMakeLists.txt  day21.cpp  day21.h
src/day21/padSolver/: CMakeLists.txt  PadSolver.cpp  PadSolver.h  permuter.cpp  permuter.h
src/day22/: CMakeLists.txt  day22.cpp  day22.h
src/day22/buyer/: Buyer.cpp  Buyer.h  BuyerV2.cpp  BuyerV2.h  CMakeLists.txt  Secret.cpp  Secret.h
src/day23/: CMakeLists.txt  day23.cpp  day23.h
src/day23/network/: CMakeLists.txt  Computer23.cpp  Computer23.h  Connection.cpp  Connection.h  LanKey.cpp  LanKey.h  Network.cpp  Network.h
src/day24/: CMakeLists.txt  day24.cpp  day24.h
src/day24/graph/: CMakeLists.txt  Door.cpp  Door.h  Graph.cpp  Graph.h  InitialEntry.cpp  InitialEntry.h
src/day25/: CMakeLists.txt  day25.cpp  day25.h
src/day25/keyOrLock/: CMakeLists.txt  KeyOrLock.cpp  KeyOrLock.h
src/day3/: CMakeLists.txt  day3.cpp  day3.h
src/day4/: CMakeLists.txt  day4.cpp  day4.h
src/day5/: CMakeLists.txt  day5.cpp  day5.h
src/day6/: CMakeLists.txt  day6.cpp  day6.h
src/day7/: CMakeLists.txt  Equation.cpp  Equation.h  day7.cpp  day7.h
src/day8/: CMakeLists.txt  day8.cpp  day8.h
src/day9/: CMakeLists.txt  day9.cpp  day9.h
